[project]
name = "tbox"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Viktor Freiman", email = "freiman.viktor@gmail.com"},
]
dependencies = [
    "livekit-api>=0.3.0",
    "flask>=3.0.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
